color verde claro algo mas oscuro

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="verdeClaro">#61DA14</color>
+    <color name="verdeClaro">#52C10C</color>
     <color name="verdeOscuro">#47AF04</color>
     <color name="rojoOscuro">#C90505</color>
 </resources>
